Bug 405710 - (Dock) Window positions are not saved
Summary: (Dock) Window positions are not saved
Status: RESOLVED FIXED
Alias: None
Product: alkimia
Classification: Frameworks and Libraries
Component: General (other bugs)
Version First Reported In: 8.0.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-21 07:53 UTC by Ralf Habacker
Modified: 2019-03-21 07:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 8.0.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-03-21 07:53:32 UTC
Main window and dock window positions are not saved


STEPS TO REPRODUCE
1. start online quote editor
2. change position of dock windows 
3. change position and size of main windows 
4. close application
5. start application again

OBSERVED RESULT
The positions are not saved

EXPECTED RESULT
The positions should be saved


SOFTWARE/OS VERSIONS
Windows: 10
KDE Frameworks Version: 5.54
Qt Version: 5.11

ADDITIONAL INFORMATION
Comment 1 Ralf Habacker 2019-03-21 07:54:55 UTC
Git commit ef5664c5d09da8ab06099c1821656ab01cf3902f by Ralf Habacker.
Committed on 21/03/2019 at 07:54.
Pushed by habacker into branch '8.0'.

Fix '(Dock) Window positions are not saved'
FIXED-IN:8.0.1

M  +2    -0    tools/onlinequoteseditor/CMakeLists.txt
A  +88   -0    tools/onlinequoteseditor/applicationsettings.cpp     [License: GPL]
C  +11   -22   tools/onlinequoteseditor/applicationsettings.h [from: tools/onlinequoteseditor/mainwindow.h - 073% similarity]
M  +14   -0    tools/onlinequoteseditor/mainwindow.cpp
M  +5    -1    tools/onlinequoteseditor/mainwindow.h

https://commits.kde.org/alkimia/ef5664c5d09da8ab06099c1821656ab01cf3902f