Fix '(Dock) Window positions are not saved'

BUG:405710
FIXED-IN:8.0.1